Updated admin view design

--- a/Rkeeper/View/Admin/AdminTableView.xaml
+++ b/Rkeeper/View/Admin/AdminTableView.xaml
@@ -6,56 +6,85 @@
              xmlns:local="clr-namespace:Rkeeper.View.Admin"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid>
+
         <Grid.ColumnDefinitions>
+
             <ColumnDefinition Width="3*"/>
             <ColumnDefinition Width="5*"/>
+
         </Grid.ColumnDefinitions>
+
         <Grid Grid.Column="0">
+
             <Grid.RowDefinitions>
+
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition/>
                 <RowDefinition Height="2*"/>
+
             </Grid.RowDefinitions>
+
             <TextBlock Text="Add Table" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="24" FontWeight="Black"/>
+
             <TextBox Name="TableName" Grid.Row="1" Style="{StaticResource txtStyle}" Text="{Binding TableName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
             <ComboBox Grid.Row="2" Margin="10,20" SelectedItem="{Binding SelectedShape}" ItemsSource="{Binding tableShapes}"/>
+
             <TextBox Name="NumberofChairs" Grid.Row="3" Style="{StaticResource txtStyle}" Text="{Binding Price, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+
             <Grid Grid.Row="5">
+
                 <Grid.ColumnDefinitions>
+
                     <ColumnDefinition/>
                     <ColumnDefinition/>
+
                 </Grid.ColumnDefinitions>
+
                 <Button Grid.Column="0" Content="A d d" HorizontalAlignment="Right" Margin="0,0,10,0" Height="40" Width="130" FontSize="24" FontWeight="Bold" Command="{Binding AddCommand}"/>
+
                 <Button Grid.Column="1" Content="B a c k" HorizontalAlignment="Left" Margin="10,0,0,0" Height="40" Width="130" FontSize="24" FontWeight="Bold" Command="{Binding BackCommand}"/>
+
             </Grid>
+
         </Grid>
+
         <ScrollViewer Grid.Column="1">
+
             <ItemsControl ItemsSource="{Binding TableCollection.Tables}" HorizontalAlignment="Center">
+
                 <ItemsControl.ItemsPanel>
+
                     <ItemsPanelTemplate>
-                        <WrapPanel>
-                            <WrapPanel.Resources>
-                                <Style TargetType="Button">
-                                    <Setter Property="Width" Value="200"/>
-                                    <Setter Property="Height" Value="150"/>
-                                    <Setter Property="Margin" Value="20,10"/>
-                                    <Setter Property="FontSize" Value="25"/>
-                                </Style>
-                            </WrapPanel.Resources>
-                        </WrapPanel>
+
+                        <WrapPanel/>
+
                     </ItemsPanelTemplate>
+
                 </ItemsControl.ItemsPanel>
+
                 <ItemsControl.ItemTemplate>
+
                     <DataTemplate>
+
                         <Grid>
-                            <Button Content="{Binding Name}"/>
+
+                            <Button Content="{Binding Name}" Background="#F46315" Style="{StaticResource TableStyle}"/>
+
                         </Grid>
+
                     </DataTemplate>
+
                 </ItemsControl.ItemTemplate>
+
             </ItemsControl>
+
         </ScrollViewer>
+
     </Grid>
+
 </UserControl>
