--- a/Rkeeper/View/MainWindowComponentsView/BillView.xaml
+++ b/Rkeeper/View/MainWindowComponentsView/BillView.xaml
@@ -6,29 +6,51 @@
              xmlns:local="clr-namespace:Rkeeper.View.MainWindowComponentsView"
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="800">
+
     <Grid>
+
         <Grid.RowDefinitions>
+
             <RowDefinition Height="5*"/>
             <RowDefinition Height="0.5*"/>
+
         </Grid.RowDefinitions>
+
         <ListView ItemsSource="{Binding OrderedFood}" FontSize="20" SelectionMode="Single" HorizontalAlignment="Center">
+
             <ListView.View>
+
                 <GridView>
+
                     <GridView.Columns>
+
                         <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" Width="220"/>
                         <GridViewColumn Header="Price" DisplayMemberBinding="{Binding Price}" Width="100"/>
                         <GridViewColumn Header="Count" DisplayMemberBinding="{Binding Count}"  Width="100"/>
+                    
                     </GridView.Columns>
+
                 </GridView>
+
             </ListView.View>
+
         </ListView>
+
         <Grid Grid.Row="1">
+
             <Grid.ColumnDefinitions>
+
                 <ColumnDefinition/>
                 <ColumnDefinition/>
+
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0"  Height="40" Width="200" HorizontalAlignment="Right" Margin="40,0" Content="C l o s e  T a b l e" FontSize="20" FontWeight="Bold" Command="{Binding CloseTableCommand}"/>
-            <Button Grid.Column="1"  Height="40" Width="200" HorizontalAlignment="Left" Margin="40,0" Content="B a c k" FontSize="20" FontWeight="Bold" Command="{Binding BackCommand}"/>
+
+            <Button Grid.Column="0"  Height="40" Width="200" HorizontalAlignment="Right" Margin="40,0" Content="C l o s e  T a b l e" FontSize="22" FontWeight="Bold" Padding="0" Background="#F46315" Command="{Binding CloseTableCommand}" Style="{StaticResource TableStyle}"/>
+
+            <Button Grid.Column="1"  Height="40" Width="200" HorizontalAlignment="Left" Margin="40,0" Content="B a c k" FontSize="22" FontWeight="Bold" Padding="0" Background="#F46315" Command="{Binding BackCommand}" Style="{StaticResource TableStyle}"/>
+
         </Grid>
+
     </Grid>
+
 </UserControl>
