--- a/Rkeeper/View/Admin/AdminTableView.xaml
+++ b/Rkeeper/View/Admin/AdminTableView.xaml
@@ -16,42 +16,46 @@
 
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="0">
+        <Border Grid.Column="0" Background="White" CornerRadius="10" Margin="5,8" MaxHeight="470" MaxWidth="340">
 
-            <Grid.RowDefinitions>
+            <Grid>
 
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition/>
-                <RowDefinition Height="2*"/>
+                <Grid.RowDefinitions>
 
-            </Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                    <RowDefinition Height="2*"/>
 
-            <TextBlock Text="Add Table" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="24" FontWeight="Black"/>
+                </Grid.RowDefinitions>
 
-            <TextBox Name="TableName" Grid.Row="1" Style="{StaticResource txtStyle}" Text="{Binding TableName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBlock Text="Add Table" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="24" FontWeight="Black"/>
 
-            <ComboBox Grid.Row="2" Margin="10,20" SelectedItem="{Binding SelectedShape}" ItemsSource="{Binding tableShapes}"/>
+                <TextBox Name="TableName" Grid.Row="1" Style="{StaticResource txtStyle}" Text="{Binding TableName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
-            <TextBox Name="NumberofChairs" Grid.Row="3" Style="{StaticResource txtStyle}" Text="{Binding Price, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                <ComboBox Grid.Row="2" Width="240" Height="40" SelectedItem="{Binding SelectedShape}" ItemsSource="{Binding tableShapes}"/>
 
-            <Grid Grid.Row="5">
+                <TextBox Name="NumberofChairs" Grid.Row="3" Style="{StaticResource txtStyle}" Text="{Binding Price, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
-                <Grid.ColumnDefinitions>
+                <Grid Grid.Row="5">
 
-                    <ColumnDefinition/>
-                    <ColumnDefinition/>
+                    <Grid.ColumnDefinitions>
 
-                </Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
 
-                <Button Grid.Column="0" Content="A d d" HorizontalAlignment="Right" Margin="0,0,10,0" Height="40" Width="130" FontSize="24" FontWeight="Bold" Command="{Binding AddCommand}"/>
+                    </Grid.ColumnDefinitions>
 
-                <Button Grid.Column="1" Content="B a c k" HorizontalAlignment="Left" Margin="10,0,0,0" Height="40" Width="130" FontSize="24" FontWeight="Bold" Command="{Binding BackCommand}"/>
+                    <Button Grid.Column="0" Content="A d d" HorizontalAlignment="Right" Margin="0,0,10,0" Height="40" Width="130" FontSize="24" FontWeight="Bold" Padding="0,0,0,4" Background="#F46315" Command="{Binding AddCommand}" Style="{StaticResource TableStyle}"/>
+
+                    <Button Grid.Column="1" Content="B a c k" HorizontalAlignment="Left" Margin="10,0,0,0" Height="40" Width="130" FontSize="24" FontWeight="Bold" Padding="0,0,0,4" Background="#F46315" Command="{Binding BackCommand}" Style="{StaticResource TableStyle}"/>
+
+                </Grid>
 
             </Grid>
 
-        </Grid>
+        </Border>
 
         <ScrollViewer Grid.Column="1">
 
