--- a/Rkeeper/View/OpeningLoadingView/Loding.xaml
+++ b/Rkeeper/View/OpeningLoadingView/Loding.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="Rkeeper.View.OpeningLoadingView.OpeningWindow"
+﻿<Window x:Class="Rkeeper.View.OpeningLoadingView.Loding"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Rkeeper.View.OpeningLoadingView"
         mc:Ignorable="d"
-        Title="OpeningWindow" Height="230" Width="400"
+        Title="Loding" Height="280" Width="500"   
         WindowStyle="None"
         ResizeMode="NoResize"
         Icon="../../Assets/IconImage/rkeeper.ico"
@@ -16,17 +16,15 @@
         <Grid.RowDefinitions>
 
             <RowDefinition/>
-            <RowDefinition Height="auto"/>
+            <RowDefinition Height="100"/>
 
         </Grid.RowDefinitions>
 
-        <Image Source="../../Assets/IconImage/rkeeper.ico"/>
+        <MediaElement Source="pack://application:,,,/Rkeeper;component/Assets/Gifs/rkeeper.gif"/>
 
-        <TextBlock Text="RKeeper" FontSize="25" VerticalAlignment="Bottom" HorizontalAlignment="Center" FontWeight="Bold" Foreground="#F46315"/>
+        <TextBlock Grid.Row="1" x:Name="folderNameText" FontSize="16" FontWeight="Bold" Margin="10,5" VerticalAlignment="Top" TextAlignment="Center"/>
 
-        <TextBlock Text="Preparing Project" FontSize="11" VerticalAlignment="Bottom" HorizontalAlignment="Right" FontWeight="Bold" Margin="10,0" Foreground="#474D4E"/>
-
-        <ProgressBar Grid.Row="1" Margin="10" Height="25" Value="0" IsIndeterminate="True" Foreground="#F46315"/>
+        <ProgressBar Grid.Row="1" Name="LoadingBar" VerticalAlignment="Bottom" Height="30" Margin="10"/>
 
     </Grid>
 
