--- a/Rkeeper/App.xaml
+++ b/Rkeeper/App.xaml
@@ -10,7 +10,17 @@
 
             <ResourceDictionary.MergedDictionaries>
 
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Light.xaml" />
+                
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml" />
+                
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.Blue.xaml" />
+                
+                <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Cyan.xaml" />
+
                 <ResourceDictionary Source="Resources/ApplicationResources.xaml"/>
+
+                <ResourceDictionary Source="Styles/LightTheme.xaml"/>
 
                 <ResourceDictionary Source="Styles/UserViewStyles/OrderedFoodListElementStyle.xaml"/>
 
