--- a/Rkeeper/View/LoginRegisterView/LoginView.xaml
+++ b/Rkeeper/View/LoginRegisterView/LoginView.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Rkeeper.View.LoginRegisterView"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d" 
              d:DesignHeight="550" d:DesignWidth="800"
              Style="{StaticResource UserControlStyle}">
@@ -17,7 +18,7 @@
 
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="1" Background="White">
+        <Grid Grid.Column="1" Background="{DynamicResource BehindColor}">
             <Image Source="../../Assets/LoginRegisterImages/LoginImage.png"/>
         </Grid>
 
@@ -33,7 +34,7 @@
 
             </Grid.RowDefinitions>
 
-            <TextBlock Text="LOGIN" Foreground="#F46315" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="50"/>
+            <TextBlock Text="LOGIN" Foreground="{DynamicResource MainColor}" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="50"/>
 
             <TextBox Name="Username" Grid.Row="1" Text="{Binding UsernameString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource txtStyle}"/>
 
