--- a/Rkeeper/Styles/LoginRegisterStyles/TxtBoxStyle.xaml
+++ b/Rkeeper/Styles/LoginRegisterStyles/TxtBoxStyle.xaml
@@ -2,7 +2,11 @@
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
 
-    <SolidColorBrush x:Key="BorderColor" Color="#484bf2"/>
+    <!--<Style x:Key="txtStyle" TargetType="">-->
+
+    <!--</Style>-->
+
+    <!--<SolidColorBrush x:Key="BorderColor" Color="#484bf2"/>
 
     <Style x:Key="txtStyle" TargetType="TextBox">
 
@@ -204,6 +208,6 @@
 
         </Setter>
 
-    </Style>
+    </Style>-->
 
 </ResourceDictionary>
