--- a/Rkeeper/View/LoginRegisterView/LoginView.xaml
+++ b/Rkeeper/View/LoginRegisterView/LoginView.xaml
@@ -36,9 +36,9 @@
 
             <TextBlock Text="LOGIN" Foreground="{DynamicResource MainColor}" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Bottom" FontSize="50"/>
 
-            <TextBox Name="Username" Grid.Row="1" Text="{Binding UsernameString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource txtStyle}"/>
+            <TextBox Name="Username" Grid.Row="1" Text="{Binding UsernameString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="20"  FontSize="20"/>
 
-            <TextBox Name="Password" Grid.Row="2" Text="{Binding PasswordString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource pswdStyle}"/>
+            <PasswordBox x:Name="Password" Grid.Row="2" Margin="20"  FontSize="20" materialDesign:PasswordBoxAssist.Password="{Binding PasswordString, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
             <Grid Grid.Row="3" Margin="0,20">
 
@@ -59,7 +59,7 @@
 
             </Grid>
 
-            <Button Name="LoginBtn" Grid.Row="4" Background="#F46315" Style="{StaticResource LoginRegisterBtnStyle}" Content="Login" Command="{Binding LoginCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Mode=OneTime}"/>
+            <Button Name="LoginBtn" Grid.Row="4" Background="{DynamicResource MainColor}" Content="Login" Width="150" Height="70" FontSize="30" Command="{Binding LoginCommand}" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type UserControl}}, Mode=OneTime}"/>
         </Grid>
 
     </Grid>
