--- a/Rkeeper/Styles/LoginRegisterStyles/TxtBoxStyle.xaml
+++ b/Rkeeper/Styles/LoginRegisterStyles/TxtBoxStyle.xaml
@@ -2,12 +2,6 @@
 					xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
 
-    <!--<Style x:Key="txtStyle" TargetType="">-->
-
-    <!--</Style>-->
-
-    <!--<SolidColorBrush x:Key="BorderColor" Color="#484bf2"/>
-
     <Style x:Key="txtStyle" TargetType="TextBox">
 
         <Setter Property="Padding" Value="5,0"/>
@@ -208,6 +202,6 @@
 
         </Setter>
 
-    </Style>-->
+    </Style>
 
 </ResourceDictionary>
